# AstroROS

./: LICENSE  README.md
orbit_simulator_matlab/: orbit_simulator.slx  readme.md  viewer.m
reaction_wheel_tentacle_ws/: readme.md
reaction_wheel_tentacle_ws/src/cubesat_description/: CMakeLists.txt  package.xml
reaction_wheel_tentacle_ws/src/cubesat_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch
reaction_wheel_tentacle_ws/src/cubesat_description/meshes/: base_link.stl
reaction_wheel_tentacle_ws/src/cubesat_description/urdf/: cubesat.gazebo  cubesat.trans  cubesat.xacro  materials.xacro
reaction_wheel_tentacle_ws/src/ft_sensor_plugin/: CMakeLists.txt  package.xml
reaction_wheel_tentacle_ws/src/ft_sensor_plugin/include/ft_sensor_plugin/: ft_sensor_plugin.h
reaction_wheel_tentacle_ws/src/ft_sensor_plugin/src/: ft_sensor_plugin.cpp
reaction_wheel_tentacle_ws/src/reaction_wheel_control/: CMakeLists.txt  package.xml
reaction_wheel_tentacle_ws/src/reaction_wheel_control/config/: reaction_wheel_control.yaml
reaction_wheel_tentacle_ws/src/reaction_wheel_control/launch/: reaction_wheel_velocity_control.launch  tentacle_position_control.launch
reaction_wheel_tentacle_ws/src/reaction_wheel_main/: CMakeLists.txt  package.xml
reaction_wheel_tentacle_ws/src/reaction_wheel_main/launch/: display.launch  gazebo.launch  urdf.rviz
reaction_wheel_tentacle_ws/src/reaction_wheel_main/meshes/: base_camera.stl  base_joint_mount.stl  base_link.stl  dummy.stl  link_no_1.stl  link_no_2.stl  link_no_3.stl  link_no_4.stl  reaction_wheel.stl  reaction_wheel_mount.stl  thruster.stl  window.stl
reaction_wheel_tentacle_ws/src/reaction_wheel_main/urdf/: ft_sensor_plugin.xacro  materials.xacro  reaction_wheel.gazebo  reaction_wheel.trans  reaction_wheel.xacro
reaction_wheel_tentacle_ws/src/reaction_wheel_main/worlds/: no_gravity.world
reaction_wheel_tentacle_ws/src/reaction_wheel_plugin/: CMakeLists.txt  package.xml
reaction_wheel_tentacle_ws/src/reaction_wheel_plugin/src/: reaction_wheel_plugin.cpp
