<?xml version="1.0"?>
<package format="2">
  <name>ft_sensor_plugin</name>
  <version>0.0.1</version>
  <description>ft_sensor_plugin package</description>
  <maintainer email="michael1015999@gmail.com">Minsik Oh</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen</depend>
  <depend>xacro</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_dev</depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}" />
  </export>

</package>